--- a/index.html
+++ b/index.html
@@ -11,31 +11,16 @@
 
 <body style="background-color: #030C2F; margin: 0;
     font-family: craketest-regular;">
-    <div class="m-4">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a href="#" class="navbar-brand">Brand</a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav">
-                        <a href="#" class="nav-item nav-link active">Home</a>
-                        <a href="#" class="nav-item nav-link">Profile</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Messages</a>
-                            <div class="dropdown-menu">
-                                <a href="#" class="dropdown-item">Inbox</a>
-                                <a href="#" class="dropdown-item">Sent</a>
-                                <a href="#" class="dropdown-item">Drafts</a>
-                            </div>
-                        </div>
-                        <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </div>
+    <nav>
+        <div class="names">
+            <a class="Connie">CONNIE</a>
+            <a class="Nicholas">NICHOLAS</a>
+            <a class="Tim">TIM</a>
+            <a class="George">GEORGE</a>
+            <a class="Ezra">EZRA</a>
+            <a class="Emily">EMILY</a>
+        </div>
+    </nav>
 
 </html>
 
