--- a/index2.html
+++ b/index2.html
@@ -38,15 +38,15 @@
     -->
 
     <div class="frecce">
-        <a classc href="assets/medusa.svg"><img src="assets/arrows.svg"></a>
+        <a classc href=""><img src="assets/arrows.svg"></a>
     </div>
 
     <div class="intro">
         <h1>
             What we're talking about
         </h1>
-        <h4>
-            "Seven Souls" is a 2008 drama film that revolves around the main character, played by Will Smith, who plays
+        <h5>
+            "Seven Pounds" is a 2008 drama film that revolves around the main character, played by Will Smith, who plays
             the role of Ben Thomas, a man with a dark secret that drives him to seek forgiveness through acts of
             kindness and selflessness.
 
@@ -62,7 +62,7 @@
             interactions between the protagonists and appreciate their individual growth over the course of the
             narrative.
 
-        </h2>
+        </h5>
     </div>
 
 
