pre-rev 5 dicembre

--- a/index2.html
+++ b/index2.html
@@ -7,11 +7,37 @@
     <title>Seven Pounds</title>
     <link rel="stylesheet" href="style2.css">
 
+    <script src="https://d3js.org/d3.v5.js"></script>
+    <svg id="svg1" style="margin: 0 auto;"></svg>
+    <script class="tentacles">
+        let svg = d3.select('#svg1')
+            .attr('width', 400)
+            .attr('height', 400)
+
+        svg.append('line')
+            .style("stroke", "lightgreen")
+            .style("stroke-width", 10)
+            .attr("x1", 100)
+            .attr("y1", 300)
+            .attr("x2", 100)
+            .attr("y2", 1000);        
+    </script>
+
 
 
 </head>
 
 <body>
+
+    <!--
+████████╗██╗████████╗ ██████╗ ██╗      ██████╗ 
+╚══██╔══╝██║╚══██╔══╝██╔═══██╗██║     ██╔═══██╗
+   ██║   ██║   ██║   ██║   ██║██║     ██║   ██║
+   ██║   ██║   ██║   ██║   ██║██║     ██║   ██║
+   ██║   ██║   ██║   ╚██████╔╝███████╗╚██████╔╝
+   ╚═╝   ╚═╝   ╚═╝    ╚═════╝ ╚══════╝ ╚═════╝ 
+    -->
+
     <header>
         <div class="title" style="">
             SEVEN <br>POUNDS
@@ -41,9 +67,19 @@
         <a classc href=""><img src="assets/arrows.svg"></a>
     </div>
 
+    <!--
+          █████╗ ██████╗  ██████╗ ██╗   ██╗████████╗    ██╗████████╗
+         ██╔══██╗██╔══██╗██╔═══██╗██║   ██║╚══██╔══╝    ██║╚══██╔══╝
+         ███████║██████╔╝██║   ██║██║   ██║   ██║       ██║   ██║   
+         ██╔══██║██╔══██╗██║   ██║██║   ██║   ██║       ██║   ██║   
+         ██║  ██║██████╔╝╚██████╔╝╚██████╔╝   ██║       ██║   ██║   
+         ╚═╝  ╚═╝╚═════╝  ╚═════╝  ╚═════╝    ╚═╝       ╚═╝   ╚═╝                                        
+    -->
+
+
     <div class="intro">
         <h1>
-            What we're talking about
+            About it
         </h1>
         <h5>
             "Seven Pounds" is a 2008 drama film that revolves around the main character, played by Will Smith, who plays
@@ -70,6 +106,30 @@
         <img src="assets/medusa.svg" alt="">
     </div>
 </body>
+
+<!--
+██████╗  ██████╗ ██╗     ██╗     ███████╗
+██╔══██╗██╔═══██╗██║     ██║     ██╔════╝
+██████╔╝██║   ██║██║     ██║     █████╗  
+██╔══██╗██║   ██║██║     ██║     ██╔══╝  
+██████╔╝╚██████╔╝███████╗███████╗███████╗
+╚═════╝  ╚═════╝ ╚══════╝╚══════╝╚══════╝
+-->
+
+
+
+
+
+
+
+<!--
+███╗   ███╗███████╗██████╗ ██╗   ██╗███████╗ █████╗ 
+████╗ ████║██╔════╝██╔══██╗██║   ██║██╔════╝██╔══██╗
+██╔████╔██║█████╗  ██║  ██║██║   ██║███████╗███████║
+██║╚██╔╝██║██╔══╝  ██║  ██║██║   ██║╚════██║██╔══██║
+██║ ╚═╝ ██║███████╗██████╔╝╚██████╔╝███████║██║  ██║
+╚═╝     ╚═╝╚══════╝╚═════╝  ╚═════╝ ╚══════╝╚═╝  ╚═╝
+-->
 
 <footer>
     <br>
