--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     -->
 
     <header>
-        <div class="title" style="size: 1vw;">
+        <div class="title" style="font-size:12vw">
             SEVEN <br>POUNDS
         </div>
 
-        <div class="subtitle" style="size: 1vw">
+        <div class="subtitle" style="font-size:1.5vw">
             The film narrates an introspective journey to discover <br>the desires and values that sustain the
             protagonist's <br>
             inner life
@@ -68,9 +68,9 @@
 
 
     <div class="intro">
-        <h1 style="size: 1vw">
+        <h1 style="font-size:7vw">
             About it
-        </h1 style="size: 1vw">
+        </h1 style="font-size:3vw">
         <h5>
             "Seven Pounds" is a 2008 drama film that revolves around the main character, played by Will Smith, who plays
             the role of Ben Thomas, a man with a dark secret that drives him to seek forgiveness through acts of
@@ -131,17 +131,6 @@
     </span>
 
 
-    <div class="line-container">
-        <svg viewBox="0 0 946 8212" fill="none">
-            <path id="test-path"
-                d="M276.5 15C322 29 291.35 82.3605 234.5 143C182 199 54.8716 326 23.9996 580.5C4.6321 740.16 -23.0001 1256 446.5 1371C595 1407.37 622 1379.11 767 1449C912 1518.89 1021 1737.5 821.501 2155.5C759.001 2297 745.1 2363.4 777.5 2543C786.34 2592 836 2711 702.001 2776.5C430.001 2931 -108.001 3014.5 488 3399L847.5 3638C933.5 3701 941.501 3871.3 603.501 3904.5C550.5 3909.71 481 3943.66 481 4027C481 4069.5 487.5 4128.5 702.001 4244C811.5 4302.96 807.001 4321 577.001 4401C529.001 4421.5 439.501 4466.5 603.501 4518.5C655.667 4541.5 895.001 4626.5 667.001 5023.5C651.334 5071.33 603.501 5124 741.501 5189C780.501 5207.37 915.501 5256 741.501 5347.5C670.667 5373.67 583.501 5485 721.001 5527C858.501 5569 985.001 5699 667.001 5896C626.667 5930 439.201 6015.5 636.001 6133.5C698.501 6170.97 789 6221 461.5 6318C409 6330 329.2 6365.2 430 6410C496.5 6435.33 586.2 6493.2 413 6522C92.0003 6634 304.5 6868.5 430 7086C498.376 7204.5 413 7174.5 290.5 7192C172.62 7208.84 153 7273.35 273 7294.5C542.5 7342 615.4 7475.7 337 7534.5C180 7567.66 157.4 7652.9 413 7712.5C469.834 7732.33 527.7 7772.5 304.5 7774.5C227.667 7783.17 135.9 7816.3 383.5 7879.5C473.834 7897.33 594.7 7944.8 355.5 7992C184.5 8025.74 94.6004 8118.5 463 8196.5"
-                stroke="white" stroke-width="30" />
-        </svg>
-
-
-    </div>
-
-
     </div>
 
 
@@ -154,9 +143,6 @@
 ██████╔╝╚██████╔╝███████╗███████╗███████╗
 ╚═════╝  ╚═════╝ ╚══════╝╚══════╝╚══════╝
 -->
-
-
-
 
 
 
@@ -405,19 +391,19 @@
 
 
     <!--
-    <script class="tentacles">
-        let svg = d3.select('#svg1')
-            .attr('width', 100)
-            .attr('height', 300)
+<script class="tentacles">
+    let svg = d3.select('#svg1')
+        .attr('width', 100)
+        .attr('height', 300)
 
-        svg.append('line')
-            .style("stroke", "white")
-            .style("stroke-width", 50)
-            .attr("x1", 100)
-            .attr("y1", 800)
-            .attr("x2", 300)
-            .attr("y2", 100);
-    </script>
+    svg.append('line')
+        .style("stroke", "white")
+        .style("stroke-width", 50)
+        .attr("x1", 100)
+        .attr("y1", 800)
+        .attr("x2", 300)
+        .attr("y2", 100);
+</script>
 -->
 
     <footer>
@@ -437,11 +423,11 @@
     <!--
 ████████╗██████╗  █████╗  ██████╗██╗  ██╗██╗███╗   ██╗ ██████╗ 
 ╚══██╔══╝██╔══██╗██╔══██╗██╔════╝██║ ██╔╝██║████╗  ██║██╔════╝ 
-   ██║   ██████╔╝███████║██║     █████╔╝ ██║██╔██╗ ██║██║  ███╗
-   ██║   ██╔══██╗██╔══██║██║     ██╔═██╗ ██║██║╚██╗██║██║   ██║
-   ██║   ██║  ██║██║  ██║╚██████╗██║  ██╗██║██║ ╚████║╚██████╔╝
-   ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝ ╚═════╝  
-    -->
+██║   ██████╔╝███████║██║     █████╔╝ ██║██╔██╗ ██║██║  ███╗
+██║   ██╔══██╗██╔══██║██║     ██╔═██╗ ██║██║╚██╗██║██║   ██║
+██║   ██║  ██║██║  ██║╚██████╗██║  ██╗██║██║ ╚████║╚██████╔╝
+╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝ ╚═════╝  
+-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js"></script>
@@ -497,7 +483,7 @@
 
 
             const keyframes = []
-            for (let index = 0; index < 2000; index++) {
+            for (let index = 0; index < 100; index++) {
                 keyframes.push(coordinates.find((c) => c.y > (maxY * index / 2000)))
             }
 
@@ -538,7 +524,6 @@
 
 
     </script>
-
 
 </body>
 
