da rifare con tutti

--- a/index.html
+++ b/index.html
@@ -149,14 +149,15 @@
     <div id="medusa-wrapper">
 
         <span id="bianco-label" class="badge-personaggio"
-            style="display:inline-block; background-color:  white; border: 1px solid black; color:black; ">
-            BIANCO
+            style="display:inline-block; background-color:  white; border: 1px solid black; border-radius: 10px; color:black; ">
+            TIM
         </span>
 
-        <span id="rosso-label" class="badge-personaggio"
-            style="display:inline-block; background-color:  red; border: 1px solid black; color:black; position: sticky; top: 50vh;">
-            ROSSO
+        <span id="holly-label" class="badge-personaggio"
+            style="display:inline-block; background-color:  #62B4FF; border: 1px solid black; border-radius: 10px; color:black; ">
+            HOLLY
         </span>
+
         <svg viewBox="0 0 501 2810" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
             <g id="Group 35">
                 <path id="Vector 258"
@@ -220,9 +221,11 @@
                 <path id="Vector 228"
                     d="M361.692 1899.11C361.692 1940.14 315.851 1901.67 310.837 1919.91C307.703 1931.3 310.894 1965.06 306.563 1965.63C302.233 1966.2 282.821 1941.23 275.651 1931.3C262.169 1912.64 254.113 1918.68 275.651 1967.34C279.165 1975.56 282.632 1993.55 250.58 1988.14C210.979 1981.45 202.689 1991.25 266.392 2014.49"
                     stroke="#FD9CED" stroke-width="8.54702" />
+
                 <path id="tentacolobianco"
                     d="M243.175 52.2422C243.175 64.6354 243.175 140.704 220.098 169.906C184.026 215.553 161.657 236.858 152.861 309.365C147.343 354.852 139.471 501.815 273.232 534.579C315.54 544.941 323.232 536.889 364.543 556.801C405.853 576.713 436.907 638.994 380.07 758.083C362.264 798.396 358.303 817.314 367.534 868.482C370.053 882.442 384.201 916.345 346.024 935.006C268.531 979.023 115.254 1002.81 285.055 1112.36L387.477 1180.45C411.979 1198.4 414.258 1246.91 317.962 1256.37C302.862 1257.86 283.061 1267.53 283.061 1291.27C283.061 1303.38 284.913 1320.19 346.024 1353.1C377.221 1369.9 375.939 1375.03 310.412 1397.83C296.736 1403.67 271.238 1416.49 317.962 1431.3C332.824 1437.86 401.01 1462.07 336.053 1575.18C331.589 1588.8 317.962 1603.81 357.278 1622.33C368.389 1627.56 406.851 1641.42 357.278 1667.48C337.097 1674.94 312.264 1706.66 351.437 1718.62C390.611 1730.59 426.651 1767.63 336.053 1823.75C324.562 1833.44 271.152 1857.8 327.221 1891.42C345.027 1902.09 370.811 1916.35 277.506 1943.98C262.548 1947.4 239.813 1957.43 268.531 1970.19C287.477 1977.41 313.033 1993.9 263.688 2002.1C172.235 2034.01 232.776 2100.82 268.531 2162.78C288.012 2196.54 263.688 2188 228.788 2192.98C195.203 2197.78 189.614 2216.16 223.802 2222.19C300.582 2235.72 321.352 2273.81 242.035 2290.56C197.306 2300.01 190.867 2324.29 263.688 2341.27C279.88 2346.92 296.366 2358.37 232.776 2358.94C210.886 2361.41 184.742 2370.85 255.283 2388.85C281.019 2393.93 315.454 2407.46 247.306 2420.9C198.588 2430.52 172.975 2456.94 277.933 2479.17"
                     stroke="white" stroke-width="8.54702" />
+
                 <path id="Vector 231"
                     d="M323.806 2486.57C275.658 2507.66 253.72 2512.64 252.01 2548.26C251.28 2563.47 254.005 2596.2 306.996 2610.79C322.998 2615.68 365.258 2648.68 291.611 2693.84C265.875 2708.42 217.224 2750.22 228.506 2800.82"
                     stroke="#FD9CED" stroke-width="8.54702" />
@@ -274,9 +277,11 @@
                 <ellipse id="Ellipse 34" cx="381.637" cy="808.084" rx="4.55842" ry="4.55841" fill="#61B2FC" />
                 <path id="Vector 277" d="M341.469 775.32C372.096 784.295 381.497 797.97 381.497 808.226"
                     stroke="#61B2FC" stroke-width="4.84331" />
-                <path id="Vector 278"
+
+                <path id="Holly"
                     d="M342.61 775.32C297.311 762.357 282.211 757.136 236.485 746.26C109.989 716.175 71.2422 750.819 71.2422 679.451V157.371C71.2422 102.385 94.7465 67.3995 187.624 44.2656"
                     stroke="#61B2FC" stroke-opacity="0.2" stroke-width="4.84331" />
+
                 <g id="Group 31">
                     <g id="LINEE SCENE">
                         <path id="Vector 279_2" d="M0.65625 170.762H496.83" stroke="white" stroke-opacity="0.2"
@@ -390,24 +395,6 @@
     </div>
 
 
-
-
-    <!--
-<script class="tentacles">
-let svg = d3.select('#svg1')
-    .attr('width', 100)
-    .attr('height', 300)
-
-svg.append('line')
-    .style("stroke", "white")
-    .style("stroke-width", 50)
-    .attr("x1", 100)
-    .attr("y1", 800)
-    .attr("x2", 300)
-    .attr("y2", 100);
-</script>
--->
-
     <footer>
         <br>
         <div class="creators">
@@ -518,6 +505,8 @@ svg.append('line')
 
 
     </script>
+
+
 
 </body>
 
