carino ho imparato una nuova function

--- a/index.html
+++ b/index.html
@@ -754,6 +754,10 @@
         animateOnScroll('ben-label', 'true-ben')
 
 
+
+
+        // CENTRO
+
         function schiarisciBadge(groupId, label) {
 
             // EZRA
@@ -791,10 +795,10 @@
         schiarisciBadge('#Emily6', 'emily-label')
 
 
+        // FINALI
 
         function schiarisciBadgeFinale(groupId, label) {
 
-            // 
 
             ScrollTrigger.create({
                 trigger: groupId,
@@ -820,9 +824,6 @@
         schiarisciBadgeFinale('#Den3', 'den-label')
         schiarisciBadgeFinale('#Ben2', 'ben-label')
         schiarisciBadgeFinale('#Emily7', 'emily-label')
-
-
-
 
 
 
