--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     stroke="#FAFF00" stroke-width="25" />
                 <g id="EZRA">
                     <path id="Vector 318"
-                        d="M713.5 993.5C693 1040.5 665 1194.5 330.001 1178.5C128.498 1178.5 128.501 1357 128.5 1512.5V2414.5C128.498 2761 302.5 2931 1256.5 3126.5"
+                        d="M713.5 993.5C693 1040.5 643.5 1175.5 322.5 1196.5C201.5 1204.42 128.501 1357 128.5 1512.5V2414.5C128.498 2761 302.5 2931 1256.5 3126.5"
                         stroke="#627BFC" stroke-opacity="0.2" stroke-width="20" />
                     <path id="Vector 319"
                         d="M1368 3219.5C1368 3332.5 1371.17 3396.43 559 3458C282 3479 243 3622 243 3795.5V6833.5C243 7080 361.4 7169 740.999 7223C814.332 7230.67 965.499 7282.3 983.499 7427.5"
@@ -401,7 +401,7 @@
                     <circle id="Ellipse 255" cx="922" cy="9779" r="16" fill="#627BFC" />
                 </g>
                 <path id="true-ezra"
-                    d="M922 9783C942.5 9678 893.5 9583 684.633 9481.5L466.633 9385.5C326.633 9320 272.117 9284.1 263.633 9102.5L243.633 7980.5C213.5 7661.5 522.867 7583 753.5 7578C984.133 7573 981.5 7493 985.633 7441C985.633 7336.5 919.984 7264.63 753 7225.5C369.07 7167.92 233.84 7083.7 241.633 6796.5V3797.5C251.165 3581.86 292.032 3497.22 479.133 3462.5C1141.5 3392 1367.63 3404.5 1367.63 3233C1364.66 3176.04 1352 3146 1249.63 3127C870 3037.5 110 2929.5 129.13 2448C129.13 2448 120.129 1409.5 139.13 1333C158.131 1256.5 208.175 1192.25 297.131 1182C575.878 1179.27 657.133 1134.5 712.133 1000.5C740 828 692 740 479.628 706C40.0274 645.6 164.796 593.833 280.629 576C524.985 552.535 492.411 567.042 571.189 325"
+                    d="M922.001 9783C942.501 9678 893.501 9583 684.634 9481.5L466.634 9385.5C326.634 9320 272.118 9284.1 263.634 9102.5L243.634 7980.5C213.501 7661.5 522.869 7583 753.501 7578C984.134 7573 981.501 7493 985.634 7441C985.634 7336.5 919.986 7264.63 753.001 7225.5C369.071 7167.92 233.842 7083.7 241.634 6796.5V3797.5C251.166 3581.86 292.033 3497.22 479.134 3462.5C1141.5 3392 1367.63 3404.5 1367.63 3233C1364.66 3176.04 1352 3146 1249.63 3127C870.001 3037.5 110.001 2929.5 129.132 2448C129.132 2448 111 1487.5 151.504 1363.5C192.008 1239.5 247 1216 298.5 1200.5C562.5 1163.5 637.366 1139.5 710.5 1003.5C738.367 831 692.001 740 479.629 706C40.0289 645.6 164.797 593.833 280.631 576C524.986 552.535 492.413 567.042 571.19 325"
                     stroke="#627BFC" stroke-width="20" />
                 <g id="CONNIE">
                     <path id="Vector 275"
@@ -630,29 +630,37 @@
                     </g>
                 </g>
                 <g id="Emotions">
-                    <rect id="Emo11" y="9537" width="1862" height="277" fill="#00FA0A" fill-opacity="0.5" />
-                    <rect id="Emo10" y="8684" width="1862" height="853" fill="#4100FA" fill-opacity="0.5" />
-                    <rect id="Emo09" y="2988" width="1862" height="89" fill="#8D67F8" fill-opacity="0.5" />
-                    <rect id="Emo08" y="2774" width="1862" height="214" fill="#67F8E7" fill-opacity="0.5" />
-                    <rect id="Emo08_2" y="3077" width="1862" height="142" fill="#67F8E7" fill-opacity="0.5" />
-                    <rect id="Emo08_3" y="4313" width="1862" height="279" fill="#67F8E7" fill-opacity="0.5" />
-                    <rect id="Emo07" y="2456" width="1862" height="318" fill="#FA0087" fill-opacity="0.5" />
-                    <rect id="Emo06" y="1924" width="1862" height="532" fill="#4100FA" fill-opacity="0.5" />
-                    <rect id="Emo06_2" y="3219" width="1862" height="1094" fill="#4100FA" fill-opacity="0.5" />
-                    <rect id="Emo06_3" x="1" y="4592" width="1862" height="1708" fill="#4100FA" fill-opacity="0.5" />
-                    <rect id="Emo06_4" x="1" y="6589" width="1862" height="525" fill="#4100FA" fill-opacity="0.5" />
-                    <rect id="Emo04" y="1483" width="1862" height="225" fill="#67F8E7" fill-opacity="0.5" />
-                    <rect id="Emo04_2" y="6300" width="1862" height="289" fill="#67F8E7" fill-opacity="0.5" />
+                    <rect id="Emo09" y="9537" width="1862" height="277" fill="#00FA0A" fill-opacity="0.5" />
+                    <rect id="Emo08" y="8684" width="1862" height="853" fill="#4100FA" fill-opacity="0.5" />
+                    <rect id="Emo07" y="2988" width="1862" height="89" fill="#8D67F8" fill-opacity="0.5" />
+                    <g id="Emo06">
+                        <rect id="Rectangle" y="2774" width="1862" height="214" fill="#67F8E7" fill-opacity="0.5" />
+                        <rect id="Rectangle_2" y="3077" width="1862" height="142" fill="#67F8E7" fill-opacity="0.5" />
+                        <rect id="Rectangle_3" y="4313" width="1862" height="279" fill="#67F8E7" fill-opacity="0.5" />
+                    </g>
+                    <rect id="Emo05" y="2456" width="1862" height="318" fill="#FA0087" fill-opacity="0.5" />
+                    <g id="Emo04">
+                        <rect id="Rectangle_4" y="1924" width="1862" height="532" fill="#4100FA" fill-opacity="0.5" />
+                        <rect id="Rectangle_5" y="3219" width="1862" height="1094" fill="#4100FA" fill-opacity="0.5" />
+                        <rect id="Rectangle_6" x="1" y="4592" width="1862" height="1708" fill="#4100FA"
+                            fill-opacity="0.5" />
+                        <rect id="Rectangle_7" x="1" y="6589" width="1862" height="525" fill="#4100FA"
+                            fill-opacity="0.5" />
+                    </g>
+                    <g id="Emo03">
+                        <rect id="Rectangle_8" y="1483" width="1862" height="225" fill="#67F8E7" fill-opacity="0.5" />
+                        <rect id="Rectangle_9" y="6300" width="1862" height="289" fill="#67F8E7" fill-opacity="0.5" />
+                    </g>
                     <g id="Emo02">
-                        <rect id="Rectangle" y="686" width="1862" height="320" fill="#F86767" fill-opacity="0.5" />
-                        <rect id="Rectangle_2" y="7107.52" width="1862" height="505.482" fill="#F86767"
+                        <rect id="Rectangle_10" y="686" width="1862" height="320" fill="#F86767" fill-opacity="0.5" />
+                        <rect id="Rectangle_11" y="7107.52" width="1862" height="505.482" fill="#F86767"
                             fill-opacity="0.5" />
                     </g>
                     <g id="Emo01">
-                        <rect id="Rectangle_3" y="17" width="1862" height="669" fill="#D9D9D9" fill-opacity="0.5" />
-                        <rect id="Rectangle_4" y="1006" width="1862" height="477" fill="#D9D9D9" fill-opacity="0.5" />
-                        <rect id="Rectangle_5" y="1706" width="1862" height="143" fill="#D9D9D9" fill-opacity="0.5" />
-                        <rect id="Rectangle_6" y="7613" width="1862" height="1071" fill="#D9D9D9" fill-opacity="0.5" />
+                        <rect id="Rectangle_12" y="7613" width="1862" height="1071" fill="#D9D9D9" fill-opacity="0.5" />
+                        <rect id="Rectangle_13" y="17" width="1862" height="669" fill="#D9D9D9" fill-opacity="0.5" />
+                        <rect id="Rectangle_14" y="1006" width="1862" height="477" fill="#D9D9D9" fill-opacity="0.5" />
+                        <rect id="Rectangle_15" y="1706" width="1862" height="143" fill="#D9D9D9" fill-opacity="0.5" />
                     </g>
                 </g>
             </g>
@@ -845,6 +853,9 @@
                 </linearGradient>
             </defs>
         </svg>
+
+
+
 
 
 
